Adicionando logica para jogos e a competição